# API-Monitor

./: .gitignore  README.md  wanted.txt
backend/: .env.example  README.md  config.py  controllers.py  error.txt  handlers.py  main.py  models.py  pyproject.toml  requests.http  routes.py  services.py
backend/app/: config.py  main.py  scheduler.py  schemas.py
backend/app/routes/: endpoints.py  stats.py
frontend/: README.md  frontend-error.txt  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Card.jsx  Layout.jsx
frontend/src/pages/: AddEndpoint.jsx  Dashboard.jsx  EndpointDetails.jsx  EndpointList.jsx  Login.jsx  Register.jsx
frontend/src/services/: api.js
