[project]
name = "api-monitor"
version = "0.1.0"
description = "API Monitor Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "motor",
    "apscheduler",
    "httpx",
    "pydantic[email]",
    "pydantic-settings",
    "python-dotenv",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "python-multipart",
    "bcrypt==4.0.1",
]
